Added MasterHeader|ScrollTop. Reorg of include files (static|template)

--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,47 @@
----
-#-------------------------------
-# General Site Settings
-baseurl: "" # The subpath of your site, e.g. /blog
-url: "" # The base hostname & protocol for your site, e.g. http://example.com
+# ------------------------------------------------------------------------------
+# ~/_config.yml
+# Global Jekyll site configuration
+#
+# Product/Info:
+# https://jekyll.one
+#
+# Copyright (C) 2016 Present, Themefisher
+# Copyright (C) 2023 Juergen Adams
+#
+# Theme Parsa is licensed under the MIT License.
+# See: https://github.com/themefisher/parsa-jekyll/blob/main/LICENSE
+# Jekyll-Parsais licensed under the MIT License.
+# See: https://github.com/jekyll-one-org/j1-template/blob/main/LICENSE.md
+# ------------------------------------------------------------------------------
 
-title: Parsa | Portfolio Jekyll Template
-logo: /assets/images/logo.png # You can add own logo
-description: # Add your awesome description
-copyright: Copyright 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)
+#-------------------------------------------------------------------------------
+# General Site Settings
+
+# The subpath of your site, e.g. /blog
+#
+baseurl:                                ""
+
+ # The base hostname & protocol for your site, e.g. http://example.com
+ #
+url:                                    ""
+
+title:                                  Parsa | Portfolio Jekyll Template
+logo:                                   /assets/images/logo.png                 # You can add own logo
+description:                                                                    # Add your awesome description
+copyright:                              Copyright 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)
+
 # Preloader
-preloader: true # To disable preloader change value to false
+preloader:                              true # To disable preloader change value to false
 
 menu:
-  - name: Home
-    url: /
-  - name: About
-    url: /about/
-  - name: Contact
-    url: /contact/
+  - name:                               Home
+    url:                                /
+  - name:                               All Posts
+    url:                                /#all-posts
+  - name:                               About
+    url:                                /about/
+  - name:                               Contact
+    url:                                /contact/
 
 # *** NOTE ***
 # You can add submenus. For example:
@@ -30,32 +54,45 @@ menu:
 #       url: /peru/
 # ----------------------------------
 
-layout_home_page: true # Homepage layout ( two layout is available, you can set the another layout by change the value of layout_home_page "true" to "false")
 
-featured-post-slider: true # You can enable or disable the featured-post-slider using true or false values.
+#-------------------------------------------------------------------------------
+# Layout Settings
 
-#-------------------------------
+# Homepage layout ( two layout is available, you can set the another layout by change the value of layout_home_page "true" to "false")
+layout_home_page:                       true
+
+# You can enable or disable the featured-post-slider using true or false values.
+featured-post-slider:                   true
+
+#-------------------------------------------------------------------------------
 # Hero Section
 hero:
-  hero-subtitle: I’m a Freelance Interactive Art Director based in France. Focusing across branding and identity, digital and print.
-  hero-banner: /assets/images/banner-img.png # Add your banner image '/assets/images/'
+  hero-subtitle: >
+                                        I’m a Freelance Interactive Art Director based in France.
+                                        Focusing across branding and identity, digital and print.
+  # Add your banner image '/assets/images/'
+  hero-banner:                          /assets/images/banner-img.png
 
-#-------------------------------
+#-------------------------------------------------------------------------------
 # Author Settings
+#
 author:
-  name: Jhon Abraham
+  name:                                 Jhon Abraham
 
-#-------------------------------
+#-------------------------------------------------------------------------------
 # Contact Info
+#
 contact:
-  email: example@ymail.com
-  phone: +90 000 333 22
+  email:                                example@ymail.com
+  phone:                                +90 000 333 22
   address:
-    city: Sydney
-    street: 6 rip carl Avenue CA 90733
+    city:                               Sydney
+    street:                             6 rip carl Avenue CA 90733
 
+#-------------------------------------------------------------------------------
 # Contact Form
-contact-form: example@email.com
+#
+contact-form:                           example@email.com
 
 # Social links
 social:
@@ -64,56 +101,60 @@ social:
   - { icon: "ti-linkedin", link: "#" }
   - { icon: "ti-github", link: "#" }
 
-#-------------------------------
+#-------------------------------------------------------------------------------
 # Comment Section (Disqus)
-disqus-identifier:    # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier:                                                              # Add your shortname for Disqus Comment. For example mr-brown
 
-#-------------------------------
+#-------------------------------------------------------------------------------
 # Instagram Feed
-instafeed: false      # To enable the instafeed, use the value true. To turn off use the value false.
-userID: 4044026246
-accessToken: 4044026246.1677ed0.8896752506ed4402a0519d23b8f50a17
+#
+# To enable the instafeed, use the value true. To turn off use the value false.
+instafeed:                              false
+userID:                                 4044026246
+accessToken:                            4044026246.1677ed0.8896752506ed4402a0519d23b8f50a17
 
-#-------------------------------
+#-------------------------------------------------------------------------------
 # Google Analytics
-google-analytics:     # Add your identifier. For example UA-99631805-1.
+#
+google-analytics:                                                               # Add your identifier. For example UA-99631805-1.
 
-#-------------------------------
+#-------------------------------------------------------------------------------
 # Build settings
-markdown: kramdown
-permalink: pretty
+markdown:                               kramdown
+permalink:                              pretty
+
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
 # - jekyll/tagging
   - jekyll-archives
 
-paginate: 10
-paginate_path: "/page/:num"
+paginate:                               10
+paginate_path:                          "/page/:num"
 
 # Pages Path
 defaults:
   - scope:
-      path: "_pages"
+      path:                             "_pages"
     values:
-      permalink: /:basename:output_ext
+      permalink:                        /:basename:output_ext
 
 include:
   - _pages
 
 # Tags
-tag_page_dir: tag
-tag_page_layout: tag_page
-tag_permalink_style: pretty
+tag_page_dir:                           tag
+tag_page_layout:                        tag_page
+tag_permalink_style:                    pretty
 
-# categories
+# Categories
 jekyll-archives:
-  enabled: all
-  layout: category
+  enabled:                              all
+  layout:                               category
   permalinks:
-    category: "/category/:name/"
+    category:                           "/category/:name/"
 
-# Exclude from processing.
+# Exclude from processing
 exclude:
   - Gemfile
   - Gemfile.lock
