--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "parsa",
-  "version": "2023.0.16",
-  "description": "J1 Theme Parsa",
+  "name": "jekyll-parsa",
+  "version": "2023.0.0",
+  "description": "Jekyll Theme Parsa",
   "homepage": "https://your.site",
   "author": {
     "name": "Your Name",
@@ -52,19 +52,13 @@
   },
   "scripts": {
     "app": "run-p -s app:*",
-    "j1-app": "run-p -s app:*",
-    "app:rackup": "cross-var cross-env INTERFACE=$npm_package_jekyll_opt_interface PORT=$npm_package_jekyll_opt_app_port bundle exec puma -C _data/puma/config.rb",
-    "_app:jekyll": "cross-var cross-env JEKYLL_ENV=$npm_package_config_mode BUNDLE_GEMFILE=$npm_package_ruby_gemfile bundle exec jekyll b -c $npm_package_jekyll_configfile $npm_package_jekyll_opt_incremental --watch",
-    "_app:open": "npm run delay-3s && cross-var open-cli $npm_package_jekyll_opt_app_url",
     "delay-1s": "node ./node_modules/npm-delay 1000",
     "delay-2s": "node ./node_modules/npm-delay 2000",
     "delay-3s": "node ./node_modules/npm-delay 3000",
     "delay-5s": "node ./node_modules/npm-delay 5000",
-    "algolia": "cross-var cross-env ALGOLIA_API_KEY=$npm_package_algolia_admin_key bundle exec jekyll algolia",
-    "algolia-check": "cross-var cross-env ALGOLIA_API_KEY=$npm_package_algolia_admin_key bundle exec jekyll algolia --dry-run --verbose",
     "build": "run-s -s build:*",
     "build:info": "echo Build site incremental ..",
-    "build:do": "cross-env SINATRA_ACTIVESUPPORT_WARNING=false bundle exec jekyll b --incremental",
+    "build:do": "bundle exec jekyll b --incremental",
     "postbuild": "run-s -s postbuild:*",
     "postbuild:finished": "echo .. build finished.",
     "postbuild:hint": "echo To open the site, run: yarn site",
@@ -81,7 +75,7 @@
     "rebuild": "run-s -s rebuild:* && run-s -s post-rebuild:*",
     "rebuild:info": "echo Rebuild site incremental ..",
     "rebuild:clean": "echo Clean up site files .. && bundle exec jekyll clean",
-    "rebuild:do": "cross-env SINATRA_ACTIVESUPPORT_WARNING=false bundle exec jekyll b --incremental",
+    "rebuild:do": "bundle exec jekyll b --incremental",
     "post-rebuild": "run-s -s postrebuild:*",
     "post-rebuild:finished": "echo .. rebuild finished.",
     "post-rebuild:hint": "echo To open the site, run: yarn site",
@@ -89,46 +83,26 @@
     "clean-site": "echo Clean up site files .. && bundle exec jekyll clean",
     "clean:start": "echo Clean up projects files ..",
     "clean:bundle-config-folder": "echo Remove bundle config folder .. && shx rm -rf .bundle",
-    "clean:log-folder": "echo Remove log folder .. && shx rm -rf log",
-    "clean:etc-folder": "echo Remove etc folder .. && shx rm -rf etc",
-    "clean:logfiles": "echo Remove various log files .. && shx rm -f *.log",
-    "clean:locks": "echo Remove lock files .. && shx rm -f *.lock && shx rm -f package-lock.json",
     "reset": "run-s -s reset:*",
     "reset:start": "echo Reset project to factory state ..",
     "reset:base-clean-files": "echo Clean up base modules .. && npm --silent run clean",
-    "reset:utilsrv-clean-files": "echo Clean up utility server .. && npm --prefix ./utilsrv --silent run clean",
-    "reset:utilsrv-clean-modules": "shx rm -rf ./utilsrv/node_modules",
     "reset:finished": "echo done.",
+    "reset:hint": "echo To setup the site, run: yarn setup",
     "setup": "npm --silent run setup-start && npm --silent run setup-base && run-s -s setup:*",
     "setup-start": "echo Setup project for first use ..",
-    "setup-base": "echo Bootstrap base modules .. && echo J1 Project Base modules: > install.log && npm --silent install shx npm-run-all cross-var cross-env >> install.log && echo done.",
+    "setup-base": "echo Bootstrap base modules .. && echo Project Base modules: > install.log && npm --silent install shx npm-run-all cross-var cross-env >> install.log && echo done.",
     "setup:env": "echo Configure environment .. && run-s -s set-env:*",
-    "set-env:loglevel": "cross-var cross-env npm config set jekyll_one_com:loglevel  $npm_package_config_loglevel",
+    "set-env:loglevel": "cross-var cross-env npm config set jekyll_one_com:loglevel $npm_package_config_loglevel",
     "set-env:mode": "cross-var cross-env npm config set jekyll_one_com:mode $npm_package_config_mode && echo done.",
-    "setup:create-folders": "echo Create project folders ..",
-    "setup:create-log-folder": "echo Create log folder .. && shx mkdir ./log",
-    "setup:create-log-archived-folder": "echo Create archived log folder .. && shx mkdir ./log/archived",
-    "setup:create-etc-folder": "echo Create etc folder .. && shx mkdir ./etc && echo done.",
-    "setup:node-modules-base": "echo Bootstrap project modules .. && echo J1 Project modules: >> install.log && npm --silent install >> install.log",
-    "setup:node-modules-utilsrv": "echo Bootstrap utility server modules .. && echo J1 Utility Server modules: >> install.log && cd utilsrv && npm --silent install >> ../install.log && cd .. && echo done.",
-    "setup:private-config": "shx cp -f _data/_defaults/private.yml _data/private.yml",
-    "setup:detect-os": "echo Detect OS .. && cross-env if-env OS=Windows_NT && cross-var echo \"OS detected: $OS\" || OS=$(echo $(getos)) && echo \"OS detected: $OS\" && echo done.",
+    "setup:node-modules-base": "echo Bootstrap project modules .. && echo Project modules: >> install.log && npm --silent install >> install.log",
+    "setup:detect-os": "echo Detect OS .. && cross-var if-env OS=Windows_NT && cross-var echo \"OS detected: $OS\" || OS=$(echo $(getos)) && echo \"OS detected: $OS\" && echo done.",
     "setup:site": "run-s -s build",
     "site": "run-p -s site:*",
-    "site:jekyll": "echo Startup the site .. && cross-env SINATRA_ACTIVESUPPORT_WARNING=false bundle exec jekyll s --incremental --livereload --livereload-port $npm_package_jekyll_opt_livereload_port --open",
-    "site:utilsrv": "npm --prefix ./utilsrv --silent run utilsrv",
-    "j1-site": "run-p -s j1-site:*",
-    "j1-site:jekyll": "bundle exec jekyll s --incremental --livereload --open",
-    "j1-site:utilsrv": "npm --prefix ./utilsrv --silent run utilsrv",
-    "bump": "run-s -s ver && run-s -s bump:* && run-s -s ver",
-    "ver": "cross-var cross-env echo \"Project version: $npm_package_version\"",
-    "bump:project": "cross-var cross-env npm version $npm_package_config_bumplevel",
-    "bump-no-git": "cross-var cross-env npm --no-git-tag-version version $npm_package_config_bumplevel",
-    "get_version": "run-s get_version:*",
-    "get_version:jekyll": "cross-var cross-env JEKYLL_ENV=$npm_package_config_mode BUNDLE_GEMFILE=$npm_package_jekyll_gemfile bundle exec jekyll --version",
-    "nbi-export--all": "cross-var nbinteract -r $npm_package_nbi_opt_nbi_input_folder -o $npm_package_nbi_opt_nbi_output_folder -t $npm_package_nbi_opt_output_type -s $npm_package_nbi_opt_credentials"
+    "site:jekyll": "echo Startup the site .. && cross-var bundle exec jekyll s --port $npm_package_jekyll_opt_web_port --incremental --livereload --livereload-port $npm_package_jekyll_opt_livereload_port --open",
+    "ver": "cross-var cross-env echo \"Project version: $npm_package_version\""
   },
   "dependencies": {
+    "@popperjs/core": "^2.11",
     "bootstrap": "^5.2",
     "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
