--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,9 @@ copyright:  >
                                         Developed by [Gethugothemes](https://gethugothemes.com)
 
 # Preloader
-preloader:                              true # To disable preloader change value to false
+# To disable preloader change value to false
+#
+preloader:                              true
 
 menu:
   - name:                               Home
@@ -47,23 +49,25 @@ menu:
 
 # *** NOTE ***
 # You can add submenus. For example:
-
+# ------------------------------------------------------------------------------
 #  menu:
 #  - name: Home
 #    url: /
 #    submenu:
 #     - name: Peru
 #       url: /peru/
-# ----------------------------------
+# ------------------------------------------------------------------------------
 
 
 #-------------------------------------------------------------------------------
 # Layout Settings
 
-# Homepage layout ( two layout is available, you can set the another layout by change the value of layout_home_page "true" to "false")
+# Homepage layout ( two layout is available, you can set the another
+# layout by change the value of layout_home_page "true" to "false")
 layout_home_page:                       true
 
-# You can enable or disable the featured-post-slider using true or false values.
+# You can enable or disable the featured-post-slider using true or
+# false values.
 featured-post-slider:                   true
 
 #-------------------------------------------------------------------------------
@@ -72,8 +76,7 @@ hero:
   hero-subtitle: >
                                         I’m a Freelance Interactive Art Director based in France.
                                         Focusing across branding and identity, digital and print.
-  # Add your banner image '/assets/images/'
-  hero-banner:                          /assets/images/banner-img.png
+  hero-banner:                          /assets/images/banner-img.png           # Add your banner image
 
 #-------------------------------------------------------------------------------
 # Author Settings
@@ -97,6 +100,7 @@ contact:
 contact-form:                           example@email.com
 
 # Social links
+#
 social:
   - { icon: "ti-facebook", link: "#" }
   - { icon: "ti-twitter-alt", link: "#" }
@@ -105,83 +109,28 @@ social:
 
 #-------------------------------------------------------------------------------
 # Comment Section (Disqus)
-disqus-identifier:                                                              # Add your shortname for Disqus Comment. For example mr-brown
+# Add your shortname for Disqus Comment. For example mr-brown
+#
+disqus-identifier:
 
 #-------------------------------------------------------------------------------
 # Instagram Feed
-#
 # To enable the instafeed, use the value true. To turn off use the value false.
+#
 instafeed:                              false
 userID:                                 4044026246
 accessToken:                            4044026246.1677ed0.8896752506ed4402a0519d23b8f50a17
 
 #-------------------------------------------------------------------------------
 # Google Analytics
+# Add your identifier. For example UA-99631805-1.
 #
-google-analytics:                                                               # Add your identifier. For example UA-99631805-1.
+google-analytics:
 
 #-------------------------------------------------------------------------------
 # Build settings
 permalink:                              pretty
-
-# ------------------------------------------------------------------------------
-# WEBRICK Customizations
-# You can provide custom headers for your site
-# See: https://jekyllrb.com/docs/configuration/webrick/
-#      https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP
-#
-# NOTE:
-# Jekyll provides by default Content-Type and Cache-Control
-# response headers: one dynamic in order to specify the nature of
-# the data being served, the other static in order to disable
-# caching so that you don’t have to fight with Chrome’s aggressive
-# caching when you are in development mode.
-#
-# webrick:
-#   headers:
-#     My-Header: My-Value
-#     My-Other-Header: My-Other-Value
-#
-# ------------------------------------------------------------------------------
-#
-webrick:
-  headers:
-    X-Builder-Template:                 J1 Theme
-    X-Builder-Engine:                   Jekyll
-
-# ------------------------------------------------------------------------------
-# POSTS Management
-# Control how post articles are generated
-#
-future:                                 true                                    # workaround (non US) TZ issues (of April 2021)
-show_drafts:                            false
-unpublished:                            false
-limit_posts:                            1000000                                 # set to UNLIMITED
-
-# ------------------------------------------------------------------------------
-# LIQUID template engine
-#
-liquid:
-  error_mode:                           warn
-
-# ------------------------------------------------------------------------------
-# MARKDOWN
-#
-# NOTE:
-#   Option input/GFM turns on the recognition of Github Flavoured
-#   Markdown (GFM)
-#
 markdown:                               kramdown
-markdown_ext:                           markdown,md
-
-kramdown:
-  input:                                GFM
-  auto_ids:                             true
-  footnote_nr:                          1
-  entity_output:                        as_char
-  toc_levels:                           1..3
-  smart_quotes:                         lsquo,rsquo,ldquo,rdquo
-  syntax_highlighter:                   rouge
 
 # ------------------------------------------------------------------------------
 # PLUGIN configuration
