Updated site config

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ logo:                                   /assets/images/logo.png                 
 description:                                                                    # Add your awesome description
 copyright:  >
                                         Copyright 2020 Designed by [Themefisher](https://themefisher.com) &
-                                        Developed by [Gethugothemes](https://gethugothemes.com)
+                                        Developed by [JekyllOne](https://jekyll.one)
 
 # Preloader
 # To disable preloader change value to false
