Latest files of version 2023.0.0

--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ title:                                  Parsa | Portfolio Jekyll Template
 logo:                                   /assets/images/logo.png                 # You can add own logo
 description:                                                                    # Add your awesome description
 copyright:  >
-                                        Copyright 2020 Designed by [Themefisher](https://themefisher.com) &
-                                        Developed by [JekyllOne](https://jekyll.one)
+                                        Copyright 2023, All right reserved &nbsp;&nbsp;&middot;&nbsp; Designed by [Themefisher](https://themefisher.com)
+                                        &nbsp;&nbsp;&middot;&nbsp;Developed by [JekyllOne](https://jekyll.one)
 
 # Preloader
 # To disable preloader change value to false
