--- a/dev._config.yml
+++ b/dev._config.yml
@@ -23,7 +23,8 @@ baseurl:                                ''
 
 # The base hostname & protocol for your site, e.g. http://example.com
 #
-url:                                    https://jekyll-parsa.netlify.app/
+# url:                                  https://jekyll-parsa.netlify.app/
+url:                                    http://localhost:25000
 
 title:                                  Parsa | Portfolio Jekyll Template
 logo:                                   /assets/images/logo.png                 # You can add own logo
