--- a/dev._config.yml
+++ b/dev._config.yml
@@ -27,7 +27,7 @@ baseurl:                                ''
 url:                                    http://localhost:25000
 
 title:                                  Parsa | Portfolio Jekyll Template
-logo:                                   /assets/images/logo.png                 # You can add own logo
+logo:                                   /assets/images/logo/logo.svg                 # You can add own logo
 description:                                                                    # Add your awesome description
 copyright:  >
                                         Copyright 2023, All right reserved &nbsp;&nbsp;&middot;&nbsp; Designed by [Themefisher](https://themefisher.com)
