--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ copyright:  >
 # To disable preloader change value to false
 # ------------------------------------------------------------------------------
 #
-preloader:                              false
+preloader:                              true
 
 # Navigation
 # Nav menu entries
